# discord-playdapp-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.yaml  start_app.sh
src/: commands.rs  config.rs  database.rs  discord.rs  lib.rs  main.rs  scheduler.rs  util.rs
src/database/: models.rs  mongo.rs
src/discord/: commands.rs  embeds.rs  handler.rs  mod.rs  slash.rs
