[package]
name = "discord-playdapp-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
mongodb = "2.4.0"
tokio = { version = "1", features = ["full"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
# ethaddr = "0.1.2"
ethers = "2.0.4"
chrono = { version = "0.4.24", features = ["serde"] }
bson = { version = "2.6.1", features = ["chrono-0_4"] }
futures = "0.3.28"
cron = "0.12.0"
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }

[profile.release]
codegen-units = 2 # Adjust the number based on your CPU cores